--- a/ooadproject/nbproject/project.properties
+++ b/ooadproject/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/ooadproject
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ooadproject
-main.class=ooadproject.Ooadproject
+main.class=swing.Ooadproject
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
