--- a/ooadprojectd/nbproject/private/private.properties
+++ b/ooadprojectd/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Toshiba\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\fatih\\AppData\\Roaming\\NetBeans\\21\\build.properties
